--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="../styles/style.css" />
-    <script src="../scripts/index.js"></script>
+    <link rel="stylesheet" href="styles/style.css" />
+    <script src="scripts/index.js"></script>
 
     <title>Etch-a-Sketch</title>
 </head>
