--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-    <h1 class="title">Etch-a-Sketch</h1>
+    <h1 class="title">
+        <a href="https://github.com/goodtrailer/etch-a-sketch">Etch-a-Sketch</a>
+    </h1>
 
     <div class="canvas"></div>
 
